Fix Vercel deployment issues

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,7 +1,7 @@
 # Kirana Market Client Environment Variables
 
 # API URL - Replace with your Render backend URL
-VITE_API_URL=https://kirana-market-api.onrender.com/api
+VITE_API_URL=https://k-mart-api.onrender.com/api
 
 # Stripe Publishable Key - Replace with your Stripe publishable key
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
