--- a/vercel.json
+++ b/vercel.json
@@ -2,21 +2,27 @@
   "version": 2,
   "builds": [
     {
-      "src": "server/server.js",
+      "src": "server/vercel-server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server/server.js"
+      "dest": "server/vercel-server.js"
     },
     {
       "src": "/(.*)",
-      "dest": "server/server.js"
+      "dest": "server/vercel-server.js"
     }
   ],
   "env": {
     "NODE_ENV": "production"
+  },
+  "functions": {
+    "server/vercel-server.js": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
   }
 }
